[gd_scene format=3 uid="uid://bcyqijde0s6hi"]

[ext_resource type="PackedScene" uid="uid://bvdbogspriemp" path="res://interface/components/context_menu/context_menu_base.tscn" id="1_5kc8s"]
[ext_resource type="Script" uid="uid://dewtk4ocn5qq1" path="res://interface/components/context_menu/channel_list_context_menu.gd" id="2_hopoh"]
[ext_resource type="Texture2D" uid="uid://y6mj4jjk8eb1" path="res://icons/addBox.png" id="2_j5ex1"]
[ext_resource type="Texture2D" uid="uid://b43bwcrraa7qq" path="res://icons/unfoldMore.png" id="4_hopoh"]

[node name="ChannelListContextMenu" unique_id=319957489 instance=ExtResource("1_5kc8s")]
script = ExtResource("2_hopoh")

[node name="PanelContainer" parent="." index="1" unique_id=235822602]
custom_minimum_size = Vector2(250, 0)

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer" parent_id_path=PackedInt32Array(547925685) index="0" unique_id=996792348]
layout_mode = 2
text = "Channel List"
horizontal_alignment = 1

[node name="CreateChannelButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer" parent_id_path=PackedInt32Array(547925685) index="1" unique_id=1112986017]
layout_mode = 2
text = "Create Channel"
icon = ExtResource("2_j5ex1")
expand_icon = true

[node name="ReOrderMode" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer" parent_id_path=PackedInt32Array(547925685) index="2" unique_id=405376971]
unique_name_in_owner = true
layout_mode = 2
text = "Re-order mode"
icon = ExtResource("4_hopoh")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CreateChannelButton" to="." method="_on_create_channel_button_pressed"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/ReOrderMode" to="." method="_on_re_order_mode_toggled"]
